# simple-grpo

./: .gitignore  README.md  launch_runs.py  pyproject.toml
simple_grpo/: grpo_utils.py  math_extract.py  simple_data.py  simple_eval.py  simple_metric.py  simple_trainer.py  utils.py
simple_grpo/beaker/: config.py  constants.py  defaults.py  gantry.py  gantry_launch.py  launch.py
src/: math_extract.py  simple_data.py  simple_eval.py  simple_grpo.py  simple_metric.py
src/beaker/: constants.py  defaults.py  launch.py
